fix: faq cards gap

--- a/src/components/Faq/Faq.module.scss
+++ b/src/components/Faq/Faq.module.scss
@@ -81,7 +81,7 @@
     }
 
     .cards {
-      gap: 30px;
+      gap: 15px;
     }
   }
 }
